palindrome or not

--- a/style.css
+++ b/style.css
@@ -1,7 +1,7 @@
 @import url("https://fonts.googleapis.com/css2?family=Montserrat&display=swap");
 
 :root {
-  --background: #9ca3af;
+  --background: #E5E7EB;
   --text: #4b5563;
 }
 
